[gd_scene load_steps=6 format=2]

[ext_resource path="res://AllBlood.gd" type="Script" id=1]
[ext_resource path="res://Sprites/blood4.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/blood3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/blood2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/blood1.tscn" type="PackedScene" id=5]

[node name="AllBlood" type="Node2D"]
scale = Vector2( 0.4, 0.4 )
z_index = 2
script = ExtResource( 1 )

[node name="blood1" parent="." instance=ExtResource( 5 )]
script = null

[node name="blood2" parent="." instance=ExtResource( 4 )]

[node name="blood3" parent="." instance=ExtResource( 3 )]

[node name="blood4" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.554
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
